# pyDYNAM-O

./: .gitignore  .gitmodules  LICENSE  README.md  SOhistograms.py  data_night_peaks.csv  environment.yml  extractTFPeaks.py  findTFPeaks.py  labelTest.py  main.py  mtsTest.py  pyTOD.py  pyTOD_example.py  pyTOD_examples.py  pyTODhelper.py  setup.cfg  watershedFramework.py
data/: chunk_data.mat  example_night.csv  night_stages.csv  segment_peaks.csv  segment_stages.csv
dynam_o/: SOPH.py  TFpeaks.py  multitaper.py  pipelines.py  utils.py
examples/: pyTOD_example.py  run_example_data.py
examples/_example_data/: chunk_data.csv  night_stages.csv  segment_data.csv
matlab_tests/: chunk_data.mat  labels.mat  merged_labels.csv  segment_data.mat  trimmed_regions.csv  watershed.csv
pyTOD/: SOPH.py  TFpeaks.py  multitaper.py  pipelines.py  utils.py
python_tests/: bandpasstest.py  cheybytest.py  data.csv  edfTest.py  mtsTest.py  watershedFramework.py  watershedTest.py
