[metadata]
name = dynam_o
version = 1.0.0
description = Dynamic Oscillation Toolbox
author = Michael J. Prerau
author_email = MPRERAU@BWH.HARVARD.EDU
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
keywords = spectral-analysis oscillation
url = https://github.com/preraulab/pyDYNAM-O
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    colorcet
    numpy
    joblib
    matplotlib
    pandas
    pyedflib
    scipy
    scikit-image
    tqdm
